cabal-version:      2.4
name:               composable-path
version:            1.0.0
synopsis:           Typed paths that are composable
-- description:

bug-reports:        https://github.com/Gabriella439/composable-path/issues
license:            BSD-3-Clause
license-file:       LICENSE
author:             Gabriella Gonzalez
maintainer:         GenuineGabriella@gmail.com
copyright:          2023 Gabriella Gonzalez

Source-Repository head
    Type: git
    Location: https://github.com/dhall-lang/dhall-haskell/tree/master/dhall

library
    exposed-modules:  Composable.Path

    build-depends:
        base               >=4.15.1.0 && < 5   ,
        exceptions         >= 0.4     && < 0.11,
        string-interpolate >= 0.3.1.0 && < 0.4 ,
        filepath                         < 1.5

    hs-source-dirs:   src
    default-language: Haskell2010
